fixed background scaling issues on small devices

--- a/master.css
+++ b/master.css
@@ -18,13 +18,32 @@ html {
 
 body {
   /*background-image: url('New-York-Skyline-Night-Usa.jpg');*/
+  background-attachment: fixed;
   background-image: url('skylinebw.jpg');
+  background-position: top center;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   font-family: robotomedium;
   height: 100%;
+}
+
+
+/*
+This next definition doesn't allow the background to get any smaller
+than a predefined size (640x426px in this case). Change the values
+here to match your background image size. The configuration in the
+flexi-background javascript file should also match these values.
+*/
+ 
+@media only all and (max-width: 1280px) and (max-height: 720px) {
+  body {
+    background-size: 1280px 720px;
+    -moz-background-size: 1280px 720px;
+    -webkit-background-size: 1280px 720px;
+  }
 }
 
 a {
